hydro_lang/tests/compile-fail/stable/mut_singleton_map_at_least_once.stderr
error[E0594]: cannot assign to `*count_mut__free`, as it is a captured variable in a `Fn` closure
  --> tests/compile-fail/stable/mut_singleton_map_at_least_once.rs:18:13
   |
 8 | fn test<'a>(p1: &Process<'a, P1>) {
   |    ----                          - change this to return `FnMut` instead of `Fn`
...
17 |         .map(q!(|x| {
   |                 --- in this closure
18 |             *count_mut += x;
   |             ^^^^^^^^^^^^^^^ cannot assign
   |
   = note: this error originates in the macro `__stageleft_quote_tests_compile_fail_mut_singleton_map_at_least_once_rs_17_16` which comes from the expansion of the macro `q` (in Nightly builds, run with -Z macro-backtrace for more info)
